fix(menu): specify a default max-width instead of a static width
BREAKING CHANGE: menus' dropdown lists will not render wider than `20rem`,
and their text will be truncated. If you have menus in which the whole menu item
label has to be displayed for the end user, make sure to increase the menu width
and read our docs to learn how to do it in a responsive way.

--- a/src/components/menu-surface/menu-surface.scss
+++ b/src/components/menu-surface/menu-surface.scss
@@ -10,9 +10,14 @@
 @include menu.core-styles;
 
 .mdc-menu-surface {
-    width: var(--menu-surface-width, auto);
     max-height: 100%;
     position: relative;
+    --mdc-menu-max-width: var(
+        --menu-surface-width,
+        min(calc(100vw - 2rem), 20rem)
+    );
+}
+
 :host(limel-menu-surface.has-grid-layout) {
     .mdc-menu-surface {
         width: var(--menu-surface-width, min(calc(100vw - 2rem), 40rem));
